# xilinx_demos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindCImg.cmake
fast/: Makefile  baseline.tcl  board_compile.tcl  fast.cl  fast_pipeline-hw.xclbin  fast_pipeline.cl  fast_pipeline_nonmax.cl  install.sh  main.cpp  oclHelper.h  pgm.cpp  pgm.h  pipeline.tcl
fast/data/: square.pgm  square.test
src/: CAFWorker.cpp  CAFWorker.h  CMakeLists.txt  Makefile  fast.cpp  fast.h  guiMain.cpp  guiMain.h  guiMain.ui  guiResources.qrc  main.cpp  oclHelper.cpp  oclHelper.h
