CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(arrayfire-demo)

# Setup QT and all dependencies
find_package(Qt4 COMPONENTS QtCore QtGui QtMain QtOpenGL REQUIRED)
INCLUDE(${QT_USE_FILE})
file(GLOB FORMS *.ui)
file(GLOB RESOURCES *.qrc)
file(GLOB HEADERS gui*.h CAFWorker.h)
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
QT4_WRAP_UI(FORMS_MOC ${FORMS})
QT4_ADD_RESOURCES(RESOURCES_MOC ${RESOURCES})

FIND_PACKAGE(OpenCL REQUIRED)
#MESSAGE(STATUS "OpenCL_FOUND: " ${OpenCL_FOUND})
#MESSAGE(STATUS "OpenCL_INCLUDE_DIR: " ${OpenCL_INCLUDE_DIR})
#MESSAGE(STATUS "OpenCL_INCLUDE_DIRS: " ${OpenCL_INCLUDE_DIRS})

# Include the current directory to capture MOCed files
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${OpenCL_INCLUDE_DIRS})

# Gather the source code and compile targets:
FILE(GLOB SOURCE "*.cpp")

#MESSAGE(STATUS "ArrayFire CPU found. Enabling OpenCL demo program")
ADD_EXECUTABLE(xilinx-demo ${SOURCE} ${HEADERS_MOC} ${FORMS_MOC} ${RESOURCES_MOC})
TARGET_LINK_LIBRARIES(xilinx-demo ${FREEIMAGE_LIBRARIES} ${OpenCL_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT} ${QT_LIBRARIES})

INSTALL(TARGETS xilinx-demo DESTINATION bin)
